test_yuriiq/catalog/language/english/account/edit.php
<?php

// text
$_['text_account']	= 'Account';
$_['text_edit']	= 'Edit Information';
$_['text_your_details']	= 'Your Personal Details';
$_['text_success']	= 'Success: Your account has been successfully updated.';

// error
$_['error_telephone']	= 'Telephone must be between 3 and 32 characters!';
$_['error_lastname']	= 'Last Name must be between 1 and 32 characters!';
$_['error_exists']	= 'Warning: E-Mail address is already registered!';
$_['error_firstname']	= 'First Name must be between 1 and 32 characters!';
$_['error_email']	= 'E-Mail Address does not appear to be valid!';

// entry
$_['entry_firstname']	= 'First Name:';
$_['entry_fax']	= 'Fax:';
$_['entry_lastname']	= 'Last Name:';
$_['entry_email']	= 'E-Mail:';
$_['entry_telephone']	= 'Telephone:';

// heading
$_['heading_title']	= 'My Account Information';
?>